<resources>
    <string name="app_name">2_criterios_parte1_transversais_p2</string>
    <string name="ficheiro">Ficheiro</string>
    <string name="novo">Novo</string>
    <string name="opcao2">opcao2</string>
    <string name="opcao3">opcao3</string>
    <string name="opcao4">opcao4</string>
    <string name="open">Abrir</string>
    <string name="madrid">Madrid</string>
    <string name="espanha">Espanha</string>
    <string name="_12031" translatable="false">12031</string>
    <string name="insert_item">Inserir item</string>
    <string name="manter_informa_o_guardada">Manter informação guardada</string>
    <string name="preference_file_key"> Ficheiro 1</string>
    <string name="bool"> Bool</string>

</resources>
