<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/file"
        android:title="@string/ficheiro"
        app:showAsAction="always">
        <!-- submenu -->
        <menu>
            <item android:id="@+id/create_new"
                android:title="@string/novo">
            </item>
            <item android:id="@+id/open"
                android:title="@string/open">
            </item>
        </menu>
    </item>
    <item android:id="@+id/opcao2"
        android:icon="@mipmap/ic_launcher"
        app:showAsAction="always"/>

    <item android:id="@+id/opcao3"
        android:title="@string/opcao3"
        app:showAsAction="never"/>

    <item android:id="@+id/opcao4"
        android:title="@string/opcao4"
        app:showAsAction="ifRoom"/>



</menu>