<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/paises"
        android:text="@string/espanha"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/capital"
        android:text="@string/madrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/paises"
        android:layout_alignLeft="@id/paises"
        />

    <TextView
        android:id="@+id/habitantes"
        android:text="@string/_12031"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/capital"
        android:layout_alignParentRight="true"
        android:paddingRight="20dp"
        />

</RelativeLayout>